Bug 178519. Move mouse capture to parent view if the capturing view goes away. r=kmcclusk,sr=bzbarsky